# ElfLoaderPic

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: main.c
tests/: CMakeLists.txt  build_tests  pic_runner.c
